<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:padding="10dp">

            <TextView
                android:id="@+id/account_alias_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="0000000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/account_alias_edit"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/account_alias_edit"
                app:layout_constraintTop_toTopOf="@+id/account_alias_edit" />

            <TextView
                android:id="@+id/account_path_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="資料夾：0000000000"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/account_alias_edit"
                app:layout_constraintTop_toBottomOf="@+id/account_alias_tv" />

            <ImageButton
                android:id="@+id/account_alias_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/selector_account_alias_edit"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/account_remove_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/account_remove_button"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/account_backup_button"
                app:layout_constraintTop_toTopOf="@+id/account_button_line" />

            <Button
                android:id="@+id/account_backup_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_button_backup"
                app:layout_constraintLeft_toRightOf="@+id/account_remove_button"
                app:layout_constraintRight_toLeftOf="@+id/account_load_button"
                app:layout_constraintTop_toTopOf="@+id/account_button_line" />

            <Button
                android:id="@+id/account_load_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_button_load"
                app:layout_constraintLeft_toRightOf="@+id/account_backup_button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/account_button_line" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/account_button_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="80dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>